src/_theme.scss
/* ... */
button[class*="colorRed"] {
	background-color: $red !important;
	border-color: darken($red, 2%) !important;
	color: $crust !important;
}

// toggles in preferencs
// checked
div[class^="control"] > div[class*="checked"] {
	background-color: #{$green} !important;
}
// unchecked
div[class^="control"] > div {
	background-color: #{$surface1} !important;
}
// colorBrandNew bs
*[class*="colorBrandNew"] {
	background-color: #{$brand} !important;
}

// popouts
div[class^="layerContainer"] {
	// right-click popups for guild, channels, and user
	#guild-header-popout,
	#guild-context,
	div[id^="channel-context"],
	div[id^="user-context"] {
		background: $crust !important;

		// hide the scroller, as it's the wrong color
		div[class^="scroller"] {
			overflow: hidden !important;
		}
	}

	> div[class^="layer"] {
		// search popout
		div[role="listbox"] {
			background-color: $mantle !important;
		}

		div[class^="focusLock"] {
			// create channel (modal) and stream popout (modalSize)
			div[class^="modal-"],
			div[class^="modalSize-"] {
				background-color: $mantle !important;
				li, p, span {
					color: $text !important;
				}
			}
			// their respective footers
			div[class*="footer"] {
				background-color: $crust !important;
			}

			// feature headers
			h1, h2, h3, h4, h5, h6 {
				&[class^="fixed-"] {
					&:after {
						background-color: $red !important;
					}
					color: $red !important;
				}
			}
		}
	}

	// add game
	div[class^="addGamePopout-"] {
		background-color: $mantle !important;
	}

	div[class*="searchOption-"]::after,
	div[class*="option-"]::after,
	li[class*="option-"]::after {
		display: none;
	}

	div[class^="queryContainer"] {
		background-color: #{$crust};
		span[class^="key"] {
			color: $text !important;
			background-color: $base !important;
		}
	}
}

div[class*="date-"] {
	color: $brand !important;
}

// 'peopleList' background, friendslist, is not set via the variable
div[class^="base"] > div[class^="content"] > div[class^="container"] {
	background-color: $base !important;
}

// the thin line in front of @ mentioned messages
div[class*="mentioned"]::before {
	background-color: adjust-color($brand, $alpha: -0.25) !important;
}

// server folder settings
div[class^="focusLock"] {
	> div[class^="root"] {
		background-color: $base !important;

		> div[class*="footer"] {
			background-color: $mantle !important;
		}
	}
}

// upload modal
div[class^="uploadModal"] {
	background-color: $base !important;

	> div[class^="footer"] {
		background-color: $mantle !important;
	}
}

// 'Add a server' popup - this uses the light theme by default.
// only the footer doesn't use css variables as of now.
.theme-light {
	color: $text !important;

	> div[class^="focusLock"]
		> div[class^="root"]
		> div[class^="container"]
		div[class*="footer"] {
		background-color: $mantle !important;
	}
}

// server list icons
div[class^="upperBadge"] {
	> div[class^="iconBadge"] path{
		color: $base !important;
	}
	div[class*="participating-"] {
		background: $green !important;
	}
}

div[class^="uploadIcon"] > div > svg > circle {
	fill: $brand !important;
}

// verified badges
div[class*="flowerStarContainer-"] {
	svg[class*="flowerStar-"] * {
		fill: $green !important;
	}
	div[class^="childContainer-"] svg * {
		fill: $base !important;
	}
}

// new message ruler
main[class^="chatContent"] {
	#---new-messages-bar {
		border-color: $red;
		span {
			background-color: $red;
			color: $crust;
			border-color: $red;
		}
		svg * {
			fill: $red;
			stroke: $red;
		}
	}
	div[class^="attachedBars-"] {
		div[class*="label-"] {
			color: $base !important;
		}
	}
}

// spoiler messages
span[class^="spoilerText"] {
	&[aria-expanded="false"] {
		background-color: $surface2 !important;
	}
	&[aria-expanded="true"] {
		background-color: $surface0 !important;
	}
}

// user roles
div[class*="rolesList"] {
	div[class^="role"] {
		background-color: $crust !important;
	}
}

// add account modal + cards
form[class*="card-"] {
	background-color: $base !important;
}

// streaming badge
div[class*="liveShapeRound-"] {
	background-color: $red !important;
}

// rainbow threads
ul[aria-label$=" threads"] > li:nth-child(1n) {
	--channels-default: #{mix($red, $text, 30%)};
	--interactive-hover: #{lighten($red, 10%)};
	--interactive-active: #{lighten($red, 10%)};
}
ul[aria-label$=" threads"] > li:nth-child(2n) {
	--channels-default: #{mix($peach, $text, 30%)};
	--interactive-hover: #{lighten($peach, 10%)};
	--interactive-active: #{lighten($peach, 10%)};
}
ul[aria-label$=" threads"] > li:nth-child(3n) {
	--channels-default: #{mix($yellow, $text, 30%)};
	--interactive-hover: #{lighten($yellow, 10%)};
	--interactive-active: #{lighten($yellow, 10%)};
}
ul[aria-label$=" threads"] > li:nth-child(4n) {
	--channels-default: #{mix($green, $text, 30%)};
	--interactive-hover: #{lighten($green, 10%)};
	--interactive-active: #{lighten($green, 10%)};
}
ul[aria-label$=" threads"] > li:nth-child(5n) {
	--channels-default: #{mix($blue, $text, 30%)};
	--interactive-hover: #{lighten($sapphire, 10%)};
	--interactive-active: #{lighten($sapphire, 10%)};
}
ul[aria-label$=" threads"] > li:nth-child(6n) {
	--channels-default: #{mix($mauve, $text, 30%)};
	--interactive-hover: #{lighten($mauve, 10%)};
	--interactive-active: #{lighten($mauve, 10%)};
}

@import "_catppuccin-server";

